# sky-viz

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  data.json  pyproject.toml
.github/workflows/: build-stage-deploy.yml  build-stage.yml  cleanup.yml  deploy.yml  docker-image.yml  preview.yml  python-app.yml  stage.yml
.streamlit/: config.toml
deployment/: Pulumi.yaml  flights.Dockerfile  new_flights.Dockerfile  new_skyviz.Dockerfile  new_transform.Dockerfile  notes.md  pulumi.py  skyviz.Dockerfile  skyviz.Dockerfile.dockerignore  transform.Dockerfile
deployment/resources/: vm.py  vnet.py
htmlcov/: d_1d9929be5255b139_settings_py.html  d_2cc2eec09594102f_settings_py.html  d_6f815be83e869ef3_rest_py.html  d_b29fa24eb5dd7667_flight_samples_map_py.html  index.html  status.json
logs/: readme.md
scripts/: architecture_diagram.py  check_db.py  db_model_diagram.py  excel_scatter_data.py  flight_db_demo.py  load_historical_data.py  setup.sh  sqlalchemy_data_model_visualizer.py
src/config/: env.py  logger.py  settings.py
src/config/groups/: api.py  db.py  deploy.py  flights.py  logs.py  skyviz.py  transform.py
src/database/: interface.py  models.py
src/database/alembic/: env.py
src/database/alembic/versions/: 239feeb15ef3_presentation.py  2663727eb1ea_presentation.py  6301c4242caf_setup.py  92f5f2e783a8_aggregate.py  ac098bb74c33_presentation.py  d4689f469fd6_presentation.py  fcd06ea9f570_drop_agg.py
src/flights/: __main__.py
src/flights/api/: rest.py
src/flights/api/clients/: adsb_exchange.py
src/flights/config/: env.py  settings.py
src/flights/config/env_settings/: default.py  dev.py  prod.py  secrets.template.py
src/flights/config/groups/: api.py  db.py  general.py  logs.py  secrets.template.py
src/flights/data/: extract.py  flight_samples_clean.py  flight_samples_map.py  flight_samples_transform.py  transform.py
src/flights/data/cleaners/: flight_samples_clean.py
src/flights/data/mappers/: flight_samples.py  flight_samples_map.py  (+1 more)
src/flights/db/: base_repo.py  model.py  postgres.py  repository.py  sqlite.py
src/flights/streamlit/: Home.py  first_app.py  home.py
src/flights/utils/: logger.py
src/skyviz/: Home.py  __main__.py  deleteme.py
src/skyviz/config/: env.py  settings.py
src/skyviz/data/: cached_functions.py
src/skyviz/db/: base_repo.py  model.py  repository.py
src/skyviz/sections/: page_config.py  page_configs.py  sidebar.py
src/skyviz/utils/: logger.py  temp.py
src/streamlit/: Home.py
src/transform/: __main__.py
src/transform/config/: settings.py
src/transform/data/: aggregation.py  aircraft_ranking.py  base_calcs.py  flight_aggregation.py  flight_ranking.py  flight_sampling.py  flight_totalling.py
src/transform/db/: base_repo.py  repository.py
src/transform/utils/: logger.py
tests/config/: test_logger.py  test_settings.py
tests/e2e/: test_e2e.py
tests/flights/: conftest.py
tests/integration/: test_adsb_exchange_response.py
tests/integration/database/: test_interface.py
tests/integration/flights/: test_app_routine.py
tests/unit/api/: test_adsb_exchange.py  test_rest.py
tests/unit/config/: test_logger.py  test_settings.py
(+66 files in other folders)
