# https://setuptools.pypa.io/en/latest/userguide/quickstart.html

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sky-viz"
version = "0.0.1"
requires-python = ">=3.10.6"
dependencies = [
    "hydra-core == 1.3.2",
    "python-dotenv == 1.0.0",
    "pytest == 7.3.1",
    "requests == 2.30.0",
    "alembic == 1.11.1",
    "psycopg[binary] == 3.1.9",
    "streamlit == 1.24.0",
    "pandas == 2.0.2",
    "pulumi == 3.73.0",
    "pulumi-azure-native == 1.103.0",
    "flake8",
    "mypy",
    "types-requests",
    "types-pytz",
]
